--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,3 +5,7 @@ package-mode=false
 python="^3.12"
 fastapi = "^0.116.1"
 uvicorn = "^0.35.0"
+
+[tool.poetry.group.dev.dependencies]
+pytest = "^8.4.1"
+
