--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,7 @@ fastapi = "^0.116.1"
 uvicorn = "^0.35.0"
 alembic = "^1.17.0"
 pydantic-settings = "^2.11.0"
+sqlalchemy = "^2.0.44"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^8.4.1"
