--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,7 @@ uvicorn = "^0.35.0"
 alembic = "^1.17.0"
 pydantic-settings = "^2.11.0"
 sqlalchemy = "^2.0.44"
+asyncpg = "^0.30.0"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^8.4.1"
