--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ alembic = "^1.17.0"
 pydantic-settings = "^2.11.0"
 sqlalchemy = "^2.0.44"
 asyncpg = "^0.30.0"
+pytest-asyncio = "^1.2.0"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^8.4.1"
